--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://i.imgur.com/j7cbkza.png
 footer-links:
   dribbble: 
   email: BunkeyInteractive@gmail.com
-  facebook: https://www.facebook.com/pages/Bunkey-Interactive/1435921633315222
+  facebook: Bunkey-Interactive/1435921633315222
   flickr: 
   github: 
   instagram: 
@@ -37,7 +37,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: 
+url: http://bunkeyinteractive.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages 
 # (http://yourusername.github.io/repository-name)
